--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-slick": "^0.23.2",
-    "slick-carousel": "^1.8.1"
+    "react-swipeable-views": "^0.13.1",
+    "react-swipeable-views-utils": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
