--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "nuka-carousel": "^4.4.8",
-    "pure-react-carousel": "^1.18.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-image-lightbox": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-swipeable-views": "^0.13.1",
